--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@
  main{
     padding-top: 160px;
     padding-bottom: 160px;
-    background:linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url('./img/bg-landing-page.jpg');
+    background:linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url('/img/bg-landing-page.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
